--- a/charts/logmetrics/templates/clusterrolebinding.yaml
+++ b/charts/logmetrics/templates/clusterrolebinding.yaml
@@ -8,6 +8,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: {{ include "logmetrics.serviceAccountName" . }}
+    namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
   name: {{ include "logmetrics.rbacName" . }}
