--- a/charts/logmetrics/templates/deployment.yaml
+++ b/charts/logmetrics/templates/deployment.yaml
@@ -11,6 +11,8 @@ spec:
       {{- include "logmetrics.selectorLabels" . | nindent 6 }}
   template:
     metadata:
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
       labels:
         {{- include "logmetrics.selectorLabels" . | nindent 8 }}
     spec:
