Debug log for matched logline, configurable loglevel in helm chart

--- a/charts/logmetrics/templates/deployment.yaml
+++ b/charts/logmetrics/templates/deployment.yaml
@@ -28,6 +28,7 @@ spec:
           args:
             - --config=/etc/logmetrics/config.yaml
             - --incluster
+            - --log.level={{ .Values.logLevel }}
           ports:
             - name: metrics
               containerPort: 9748
